cpp/series/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.007s
user	0m0.002s
sys	0m0.004s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/series/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/series/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/series/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/series/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/series/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/series/build'
[ 25%] Building CXX object CMakeFiles/series.dir/series_test.cpp.o
[ 50%] Building CXX object CMakeFiles/series.dir/series.cpp.o
[ 75%] Building CXX object CMakeFiles/series.dir/test/tests-main.cpp.o
[100%] Linking CXX executable series
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/series/build'
[100%] Built target series
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/series/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/series/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/series/build'
===============================================================================
All tests passed (10 assertions in 10 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/series/build'
[100%] Built target test_series
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/series/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/series/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/series.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/series.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)6703"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
series.cpp                                    28      28   100%   
series_test.cpp                               42      42   100%   
test/catch.hpp                                48      27    56%   1448-1450,1642-1643,1827-1833,1835-1836,2016-2017,2039-2040,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                        118      97    82%
------------------------------------------------------------------------------
lines: 82.2% (97 out of 118)
branches: 39.6% (126 out of 318)

real	0m10.310s
user	0m9.555s
sys	0m0.741s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.160s
user	0m0.107s
sys	0m0.056s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 3


real	0m0.201s
user	0m0.143s
sys	0m0.060s

===============================================================================

Running: clang-format-16 -style=file -i ./series.cpp ./series_test.cpp ./series.h

real	0m0.044s
user	0m0.024s
sys	0m0.020s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./series.cpp ./series_test.cpp ./series.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/series/series.h:4:10: fatal error: 'iterator' file not found
#include <iterator>
         ^~~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/series/series.h.

real	0m0.630s
user	0m0.589s
sys	0m0.041s


real	0m0.633s
user	0m0.589s
sys	0m0.044s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
13979 warnings generated.
49414 warnings generated.
49414 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/series/series.h.
Suppressed 49419 warnings (49414 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m7.191s
user	0m7.115s
sys	0m0.076s
Running: clang-tidy-16 ./series.cpp ./series_test.cpp ./series.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/series/series.h:4:10: error: 'iterator' file not found [clang-diagnostic-error]
#include <iterator>
         ^~~~~~~~~~


real	0m7.194s
user	0m7.117s
sys	0m0.078s

===============================================================================

